--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
     
     permissions:
       contents: read
+      packages: write
 
     steps:
       - name: Checkout repository
@@ -41,6 +42,31 @@ jobs:
 
       - name: Build all packages and apps
         run: npm run build
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Container Registry
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push sidecar image
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: apps/sidecar/Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository }}/shadow-sidecar:latest
+            ghcr.io/${{ github.repository }}/shadow-sidecar:${{ github.sha }}
+          platforms: linux/amd64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
