--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,14 +34,14 @@ jobs:
       - name: Generate Prisma types
         run: npm run generate
 
+      - name: Build workspace packages first
+        run: npm run build
+
       - name: Run type checking
         run: npm run check-types
 
       - name: Run linting
         run: npm run lint
-
-      - name: Build all packages and apps
-        run: npm run build
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
