fix docker issue

--- a/apps/sidecar/Dockerfile
+++ b/apps/sidecar/Dockerfile
@@ -106,5 +106,8 @@ EXPOSE 8080
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD curl -f http://localhost:8080/health || exit 1
 
+# Ensure we're in the correct working directory for module resolution
+WORKDIR /app
+
 # Start the application
 CMD ["node", "apps/sidecar/dist/server.js"]
