--- a/packages/command-security/package.json
+++ b/packages/command-security/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
-    "@types/node": "^20.11.1",
-    "typescript": "~5.7.2"
+    "@types/node": "^24.0.13",
+    "typescript": "^5.8.3"
   }
 }
