--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "website",
   "version": "0.1.0",
   "type": "module",
   "private": true,
@@ -12,6 +12,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
