--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -13,13 +13,15 @@
   "dependencies": {
     "@eslint/js": "^9.31.0",
     "@next/eslint-plugin-next": "^15.0.0",
+    "dlv": "^1.1.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-tailwindcss": "^3.17.0",
+    "eslint-plugin-tailwindcss": "^3.18.2",
     "eslint-plugin-turbo": "^2.5.5",
     "globals": "^15.0.0",
+    "postcss-nested": "^6.2.0",
     "typescript-eslint": "^8.37.0"
   },
   "publishConfig": {
