--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-tailwindcss": "^3.18.2",
     "eslint-plugin-turbo": "^2.5.5",
     "globals": "^15.0.0",
+    "postcss-js": "^4.0.1",
     "postcss-nested": "^6.2.0",
     "typescript-eslint": "^8.37.0"
   },
