turbo json envs

--- a/turbo.json
+++ b/turbo.json
@@ -1,10 +1,43 @@
 {
   "$schema": "https://turborepo.com/schema.json",
   "ui": "tui",
+  "globalEnv": [
+    "NODE_ENV",
+    "DATABASE_URL"
+  ],
   "tasks": {
     "build": {
       "dependsOn": [
         "^build"
+      ],
+      "env": [
+        "BETTER_AUTH_SECRET",
+        "GITHUB_CLIENT_ID",
+        "GITHUB_CLIENT_SECRET",
+        "GITHUB_WEBHOOK_SECRET",
+        "GITHUB_APP_ID",
+        "GITHUB_APP_SLUG",
+        "GITHUB_PRIVATE_KEY",
+        "OPENAI_API_KEY",
+        "ANTHROPIC_API_KEY",
+        "PINECONE_API_KEY",
+        "PINECONE_INDEX_NAME",
+        "CLIENT_URL",
+        "API_URL",
+        "API_PORT",
+        "AGENT_MODE",
+        "WORKSPACE_DIR",
+        "MAX_REPO_SIZE_MB",
+        "CONCURRENCY",
+        "MODEL",
+        "MODEL_MINI",
+        "USE_PINECONE",
+        "EMBEDDING_MODEL",
+        "VM_*",
+        "K8S_*",
+        "KUBERNETES_*",
+        "HEALTH_CHECK_*",
+        "MAX_*"
       ],
       "inputs": [
         "$TURBO_DEFAULT$",
@@ -28,7 +61,32 @@
     },
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "env": [
+        "BETTER_AUTH_SECRET",
+        "GITHUB_CLIENT_ID",
+        "GITHUB_CLIENT_SECRET",
+        "GITHUB_WEBHOOK_SECRET",
+        "GITHUB_APP_ID",
+        "GITHUB_APP_SLUG",
+        "GITHUB_PRIVATE_KEY",
+        "OPENAI_API_KEY",
+        "ANTHROPIC_API_KEY",
+        "PINECONE_API_KEY",
+        "CLIENT_URL",
+        "API_URL",
+        "API_PORT",
+        "AGENT_MODE",
+        "WORKSPACE_DIR",
+        "DEBUG"
+      ],
+      "inputs": [
+        "$TURBO_DEFAULT$",
+        ".env.development.local",
+        ".env.local",
+        ".env.development",
+        ".env"
+      ]
     },
     "db:migrate:dev": {
       "cache": false,
@@ -50,7 +108,10 @@
       "dependsOn": [
         "^generate"
       ],
-      "cache": false
+      "cache": false,
+      "env": [
+        "DATABASE_URL"
+      ]
     }
   }
 }
