fix prisma vercel monorepo error

--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "6.13.0"
+  }
 }
