--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -26,7 +26,9 @@ RUN npm install
 
 # Copy source files and build
 COPY --from=builder /app/out/full/ .
-# Generate Prisma client first
+# Remove any local Prisma generated files AND compiled TypeScript files that may have hard-coded paths
+RUN rm -rf packages/db/generated/ packages/db/dist/
+# Generate Prisma client fresh in container with correct paths
 RUN npm run generate --filter=@repo/db
 # Build the server with Docker-specific config
 WORKDIR /app/apps/server
