--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,7 @@
     "@octokit/auth-app": "^8.0.2",
     "@octokit/rest": "^22.0.0",
     "@octokit/types": "^14.1.0",
+    "@openrouter/ai-sdk-provider": "^0.7.3",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
