--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -19,6 +19,7 @@
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/openai": "^1.3.23",
     "@kubernetes/client-node": "^1.0.0",
+    "@openrouter/ai-sdk-provider": "^0.7.3",
     "@repo/command-security": "*",
     "@repo/db": "*",
     "@repo/types": "*",
