--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,6 +17,7 @@
     "@octokit/auth-app": "^8.0.2",
     "@octokit/rest": "^22.0.0",
     "@octokit/types": "^14.1.0",
+    "@prisma/nextjs-monorepo-workaround-plugin": "6.13.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -27,6 +28,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@repo/types": "*",
+    "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.83.0",
     "@types/marked": "^5.0.2",
     "@xterm/addon-fit": "^0.10.0",
@@ -37,6 +39,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "marked": "^16.1.1",
+    "material-icon-theme": "^5.25.0",
     "nanoid": "^5.1.5",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
