--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "shadow-monorepo",
   "private": true,
   "scripts": {
-    "build": "turbo run build --filter=!website",
-    "dev": "turbo run dev --filter=!website",
-    "lint": "turbo run lint --filter=!website",
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "db:migrate:deploy": "turbo run db:migrate:deploy",
@@ -18,18 +18,7 @@
     "db:prod:push": "./scripts/db-prod.sh db push",
     "db:prod:studio": "./scripts/db-prod.sh studio",
     "db:prod:migrate": "./scripts/db-prod.sh migrate deploy",
-    "generate": "turbo run generate",
-    "preview:frontend": "NEXT_PUBLIC_VERCEL_ENV=preview npm run dev --workspace=frontend",
-    "docker:build": "docker-compose build",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f",
-    "docker:server": "docker build -f apps/server/Dockerfile -t shadow-server .",
-    "docker:sidecar": "docker build -f apps/sidecar/Dockerfile -t shadow-sidecar .",
-    "prod:server": "./scripts/start-server-prod.sh",
-    "dev:website": "turbo run dev --filter=website",
-    "build:website": "turbo run build --filter=website",
-    "lint:website": "turbo run lint --filter=website"
+    "generate": "turbo run generate"
   },
   "prisma": {
     "schema": "packages/db/prisma/schema.prisma"
