troubleshooting + one source of truth

--- a/apps/frontend/.env.template
+++ b/apps/frontend/.env.template
@@ -1,7 +1,9 @@
 NEXT_PUBLIC_SERVER_URL="http://localhost:4000"
 
+#TODO: Set this to your BetterAuth secret
 BETTER_AUTH_SECRET=
 
+#TODO: Set these to your GitHub app ID, slug, private key, client ID, and client secret (same as server .env)
 GITHUB_APP_ID=
 GITHUB_APP_SLUG=
 GITHUB_PRIVATE_KEY=
@@ -9,4 +11,3 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
 DATABASE_URL="postgres://postgres:@127.0.0.1:5432/shadow_dev"
-OPENAI_API_KEY=
