--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -1,13 +1,15 @@
-DATABASE_URL=
-DIRECT_URL=
+DATABASE_URL="postgres://postgres:@127.0.0.1:5432/shadow_dev"
 
-PINECONE_API_KEY=
-PINECONE_INDEX_NAME=
-ANTHROPIC_API_KEY=
-OPENAI_API_KEY=
+# TODO: Set this to your Pinecone API key
+PINECONE_API_KEY=""
+PINECONE_INDEX_NAME="shadow"
 
+# TODO: Set these to your GitHub app ID, slug, private key, client ID, and client secret (same as server .env)
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+GITHUB_WEBHOOK_SECRET=
 
 # Workspace directory for local agent:
-WORKSPACE_DIR=
+WORKSPACE_DIR= # TODO: Set this to your local workspace directory
+
+```
