--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,6 +21,8 @@
     "@ai-sdk/openai": "^1.3.23",
     "@kubernetes/client-node": "^1.0.0",
     "@openrouter/ai-sdk-provider": "^0.7.3",
+    "@opentelemetry/sdk-node": "^0.203.0",
+    "@opentelemetry/sdk-trace-base": "^2.0.1",
     "@repo/command-security": "*",
     "@repo/db": "*",
     "@repo/types": "*",
