--- a/turbo.json
+++ b/turbo.json
@@ -48,6 +48,8 @@
       "persistent": true,
       "env": [
         "BETTER_AUTH_SECRET",
+        "GITHUB_PERSONAL_ACCESS_TOKEN",
+        "GITHUB_TOKEN", 
         "GITHUB_CLIENT_ID",
         "GITHUB_CLIENT_SECRET",
         "GITHUB_WEBHOOK_SECRET",
