fixed modal + setup scripts

--- a/apps/frontend/.env.template
+++ b/apps/frontend/.env.template
@@ -1,13 +1,12 @@
 NEXT_PUBLIC_SERVER_URL="http://localhost:4000"
 
-#TODO: Set this to your BetterAuth secret
 BETTER_AUTH_SECRET=
 
-#TODO: Set these to your GitHub app ID, slug, private key, client ID, and client secret (same as server .env)
-GITHUB_APP_ID=
-GITHUB_APP_SLUG=
-GITHUB_PRIVATE_KEY=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
-DATABASE_URL="postgres://postgres:@127.0.0.1:5432/shadow_dev"
+GITHUB_PERSONAL_ACCESS_TOKEN=
+
+NEXT_PUBLIC_FORCE_GITHUB_APP=
+
+DATABASE_URL=
