--- a/apps/server/.env.template
+++ b/apps/server/.env.template
@@ -3,11 +3,8 @@ DATABASE_URL="postgres://postgres:@127.0.0.1:5432/shadow_dev"
 PINECONE_API_KEY=
 PINECONE_INDEX_NAME="shadow"
 
-GITHUB_APP_USER_ID=
-GITHUB_APP_SLUG=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-GITHUB_WEBHOOK_SECRET=
+GITHUB_PERSONAL_TOKEN=
 
-# Workspace directory for local agent:
 WORKSPACE_DIR=
