--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -61,6 +61,7 @@
     "@repo/eslint-config": "^0.0.0",
     "@repo/typescript-config": "*",
     "@shikijs/monaco": "^3.8.1",
+    "@shikijs/transformers": "^3.9.2",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
