finish shiki diff

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -33,6 +33,7 @@
     "@repo/types": "*",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.83.0",
+    "@types/diff": "^7.0.2",
     "@types/marked": "^5.0.2",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
@@ -40,6 +41,7 @@
     "better-auth": "^1.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "diff": "^8.0.2",
     "lucide-react": "^0.525.0",
     "marked": "^16.1.1",
     "material-icon-theme": "^5.25.0",
